[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/game/info/game_infos.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerTurn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 220 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerTurn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "popup"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerTurn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 150 ), Vector2( 0, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerTurn:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 7.21, 0.0624999 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SingleInfo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_hint"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("SingleInfo:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 2.73208, 3.605, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameInfos" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Turn" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 66.0
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
align = 1
valign = 1

[node name="SingleInfo" type="Label" parent="."]
anchor_top = -0.0666667
anchor_right = 1.0
anchor_bottom = -0.0666667
margin_top = 222.0
margin_bottom = 302.0
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
custom_colors/font_color = Color( 0.027451, 0.94902, 0.929412, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerTurn" type="Label" parent="."]
anchor_top = -0.0638892
anchor_right = 1.0
anchor_bottom = -0.0638892
margin_top = 289.0
margin_right = 5760.0
margin_bottom = 369.0
theme = ExtResource( 2 )
theme_type_variation = "BigLabel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BulletZone" type="Control" parent="."]
anchor_left = 0.0375
anchor_top = 0.274074
anchor_right = 0.922917
anchor_bottom = 0.718518
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TurnPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/popup = SubResource( 1 )

[node name="HintPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/show_hint = SubResource( 5 )
